--- a/Sniffer_Redes/nbproject/configs/jnetpcap.properties
+++ b/Sniffer_Redes/nbproject/configs/jnetpcap.properties
@@ -1,2 +1,2 @@
 main.class=sniffer_redes.Pantalla_Principal
-run.jvmargs=-Djava.library.path="C:\\Users\\HeadHunters\\Desktop\\4to Semestre\\Redes de Computadoras\\Semestre\\jnetpcap-1.3.0"
+run.jvmargs=-Djava.library.path="C:\\Users\\Cesar_2\\Downloads\\jnetpcap-1.3.0"
